2008-09-10  Sam Steingold  <sds@gnu.org>

	* pathname.d (SHELL) [WIN32_NATIVE]: return NIL on success and
	exitcode on failure, just like on Unix and as documented
	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>

2008-09-02  Sam Steingold  <sds@gnu.org>

	* error.d (%DEFCLCS): use symbol_tab instead of symbol_tab_data
	to support TYPECODES on 32 bit platforms
	Reported by Vladimir Tzankov <vtzankov@gmail.com>

2008-09-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): use $(RUN) instead of lisp.run
	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>

2008-08-25  Bruno Haible  <bruno@clisp.org>

	* configure (SIGSEGV): Set to libsigsegv-2.6.

2008-08-24  Bruno Haible  <bruno@clisp.org>

	* spvw_sigsegv.d (stackoverflow_handler_continuation): New function,
	extracted from stackoverflow_handler.
	(stackoverflow_handler): Invoke it. Adapt to sigsegv_leave_handler API
	change in libsigsegv-2.6.

2008-08-21  Sam Steingold  <sds@gnu.org>

	* modules/dbus/dbus.lisp (DBusMessageIter): c-struct, not c-pointer

2008-08-21  Sam Steingold  <sds@gnu.org>

	* foreign.d (foreign_with_pointers_p): support inttypes (return false)

2008-08-20  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (I_to_ulong, I_to_slong): define regardless of
	HAVE_FFI for the sake of the syscalls module
	* modules/syscalls/calls.c (%SETHOSTID): sethostid does not return
	a value on *BSD, use errno to check for errors
	Reported by José H. Espinosa <jose.h.espinosa@gmail.com>

2008-08-20  Sam Steingold  <sds@gnu.org>

	* modules/dbus/configure.in (dbus_int64_t, dbus_int32_t, dbus_uint32_t)
	(dbus_int16_t, dbus_unichar_t, dbus_bool_t): check types
	* modules/dbus/dbus.lisp (def-c-const): import from EXPORTING;
	pass DBusError by reference using (c-pointer DBusError) instead of
	returning a fresh object using (error (c-ptr DBusError) :in-out) et al;
	(DBusMessageIter): add def-c-type

2008-08-20  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): use ${TRCRLF} to delete '\r' from